--- a/Agenda_DMOS5/app/src/main/AndroidManifest.xml
+++ b/Agenda_DMOS5/app/src/main/AndroidManifest.xml
@@ -9,15 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.NovoContatoActivity"></activity>
-        <activity android:name=".view.DetalheContatoActivity" />
-        <activity android:name=".view.ContatosActivity">
+        <activity android:name=".view.NovoUsuarioActivity"></activity>
+        <activity android:name=".view.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.NovoContatoActivity" />
+        <activity android:name=".view.DetalheContatoActivity" />
+        <activity android:name=".view.ContatosActivity" />
     </application>
 
 </manifest>
